--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,6 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+@import url('./prices.css');
+@import url('./ourproducts.css');
+@import url('./bestsellers.css');
