--- a/src/css/bestsellers.css
+++ b/src/css/bestsellers.css
@@ -37,7 +37,7 @@
     font-weight: 700;
     color: #0A224A;
     padding: 10px 0;
-}
+} 
 .bestsellers-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -64,4 +64,72 @@
 .bestsellers-list-image {
     width: 258px;
     height: 193px;
+}
+@media screen and (max-width: 768px) {
+    .bestsellers {
+        padding-bottom: 100px;
+    }
+    .bestsellers-title {
+        font-size: 32px;
+    }
+    .bestsellers-container {
+        display: block;
+    }
+    .bestsellers-container-item{
+        width: 704px;
+        height: 562px;
+        padding-left: 32px;
+        padding-right: 32px;
+        margin-bottom: 32px;
+    }
+    .bestsellers-container-image {
+        width: 704px;
+        height: 489px;
+    }
+    .bestsellers-list  {
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+    .bestsellers-list-item {
+        width: 336px;
+        height: 266px;
+    }
+    .bestsellers-list-image {
+        width: 336px;
+        height: 193px;
+    }
+    .bestsellers-list-item-title {
+        font-size: 18px;
+    }
+    .bestsellers-list-item-price {
+        font-size: 18px;
+    }
+}
+@media screen and (max-width: 480px) {
+    .bestsellers {
+        padding-bottom: 100px;
+    }
+    .bestsellers-container-item {
+        width: 343px;
+        height: 265px;
+        margin-bottom: 30px;
+    }
+    .bestsellers-container-image {
+        width: 343px;
+        height: 193px;
+    }
+    .bestsellers-list {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 30px;
+    }
+    .bestsellers-list-item {
+        width: 343px;
+        height: 265px;
+    }
+    .bestsellers-list-image {
+        width: 343px;
+        height: 193px;
+    }
 }
