--- a/src/css/ourproducts.css
+++ b/src/css/ourproducts.css
@@ -27,3 +27,44 @@
     color: #0A224A;
     padding-top: 15px;
 }
+@media screen and (max-width: 768px) {
+    .ourproducts {
+        padding-bottom: 100px;
+    }
+    .ourproducts-title {
+        font-size: 24px;
+    }
+    .ourproducts-list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 16px;
+    }
+    .ourproducts-list-item {
+        width: 344px;
+        height: 339px;
+    }
+    .ourproducts-list-image {
+        width: 344px;
+        height: 300px;
+    }
+    .ourproducts-list-item-title {
+        font-size: 18px;
+    }
+    
+}
+@media screen and (max-width: 480px) {
+    .ourproducts {
+        padding-bottom: 100px;
+    }
+    .ourproducts-title {
+        font-size: 24px;
+    }
+    .ourproducts-list-image {
+        width: 312px;
+        height: 300px;
+    }
+    .ourproducts-list-item-title {
+        font-size: 18px;
+    }
+    
+}
